; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/xfs/linux-2.6/extr_xfs_xattr.c_xfs_xattr_prefix.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/xfs/linux-2.6/extr_xfs_xattr.c_xfs_xattr_prefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i8* }
%struct.TYPE_5__ = type { i8* }
%struct.TYPE_4__ = type { i8* }

@XFS_ATTR_SECURE = common dso_local global i32 0, align 4
@xfs_xattr_security_handler = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@XFS_ATTR_ROOT = common dso_local global i32 0, align 4
@xfs_xattr_trusted_handler = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@xfs_xattr_user_handler = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @xfs_xattr_prefix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @xfs_xattr_prefix(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @XFS_ATTR_SECURE, align 4
  %6 = and i32 %4, %5
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i8*, i8** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @xfs_xattr_security_handler, i32 0, i32 0), align 8
  store i8* %9, i8** %2, align 8
  br label %19

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @XFS_ATTR_ROOT, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %10
  %16 = load i8*, i8** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @xfs_xattr_trusted_handler, i32 0, i32 0), align 8
  store i8* %16, i8** %2, align 8
  br label %19

17:                                               ; preds = %10
  %18 = load i8*, i8** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @xfs_xattr_user_handler, i32 0, i32 0), align 8
  store i8* %18, i8** %2, align 8
  br label %19

19:                                               ; preds = %17, %15, %8
  %20 = load i8*, i8** %2, align 8
  ret i8* %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
